<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaisBarato</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mensagem_escolha">Qual produto você quer comparar?</string>
    <string name="comparacao_mensagem_configuracao_produto">Escolha o tipo de lata e preço da cerveja?</string>
    <string name="comparacao_mensagem_produto_1">Primeira cerveja: </string>
    <string name="comparacao_mensagem_produto_2">Segunda cerveja: </string>
    <string name="comparacao_botao_comparar">Comparar</string>
    <string name="comparacao_preco">Preço</string>
    <string name="comparacao_peso">Peso</string>
    <string name="comparacao_peso_250">250</string>
    <string name="comparacao_peso_350">350</string>
    <string name="comparacao_peso_473">473</string>
    <string name="comparacao_peso_outro_valor">Outro valor</string>
    <string name="comparacao_garrafa_peso_275">275</string>
    <string name="comparacao_garrafa_peso_350">350</string>
    <string name="comparacao_garrafa_peso_355">355</string>
    <string name="comparacao_garrafa_peso_500">500</string>
    <string name="comparacao_garrafa_peso_600">600</string>
    <string name="comparacao_garrafa_peso_1000">1 litro</string>
    <string name="comparacao_garrafa_peso_distinto">Outro peso</string>
    <string name="comparacao_garrafa_mensagem_configuracao_produto">Escolha o preço e o tipo de garrafa da cerveja?</string>
    <string name="comparacao_garrafa_mensagem_produto_1">Primeira cerveja: </string>
    <string name="comparacao_garrafa_mensagem_produto_2">Segunda cerveja: </string>
    <string name="comparacao_garrafa_preco">Preço:</string>
    <string name="comparacao_garrafa_peso">Peso:</string>
    <string name="main_desc_lata_cerveja">Comparação entre latas de cerveja</string>
</resources>
