<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/editTextApresentacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/comparacao_mensagem_configuracao_produto" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewInvisivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.72"
            android:text="TextView"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.13"
            android:text="@string/comparacao_preco" />

        <TextView
            android:id="@+id/textViewPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.13"
            android:text="@string/comparacao_peso" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewCeveja1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comparacao_mensagem_produto_1" />

        <EditText
            android:id="@+id/precoCerveja1"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"/>

         <RadioGroup
             android:id="@+id/radioGroupPesoCerveja1"
             android:layout_width="84dp"
             android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioBut250"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comparacao_peso_250" />

                <RadioButton
                    android:id="@+id/radioBut350"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comparacao_peso_350" />

                <RadioButton
                    android:id="@+id/radioBut500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comparacao_peso_473" />
                
                 <RadioButton
                        android:id="@+id/radioButOutro1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comparacao_peso_outro_valor" />
         </RadioGroup>
  
         <EditText
              android:id="@+id/editTextPesoEspecificoCerveja1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberSigned"
              android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comparacao_mensagem_produto_2" />

        <EditText
            android:id="@+id/precoCerveja2"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >
        </EditText>

        <RadioGroup
            android:id="@+id/radioGroupPesoCerveja2"
            android:layout_width="91dp"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButSeg250"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comparacao_peso_250" />

            <RadioButton
                android:id="@+id/radioButSeg350"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comparacao_peso_350" />

            <RadioButton
                android:id="@+id/radioButSeg473"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comparacao_peso_473" />

            <RadioButton
                    android:id="@+id/radioButOutro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comparacao_peso_outro_valor" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextPesoEspecificoCerveja2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:visibility="invisible" >
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:gravity="left"
        android:text="@string/comparacao_botao_comparar" />

</LinearLayout>