<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editTextApresentacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/comparacao_mensagem_configuracao_produto" >
    </TextView>

    <TextView
        android:id="@+id/textViewCeveja1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/comparacao_mensagem_produto_1" />

    <TextView
        android:id="@+id/textViewPesoLata1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewCeveja1"
        android:layout_marginTop="76dp"
        android:text="@string/comparacao_peso" />

    <TextView
        android:id="@+id/textViewPrecoLata1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewCeveja1"
        android:layout_marginTop="15dp"
        android:text="@string/comparacao_preco" />

    <EditText
        android:id="@+id/precoCerveja1"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPrecoLata1"
        android:layout_alignBottom="@+id/textViewPrecoLata1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:enabled="true"
        android:gravity="left"
        android:text="@string/comparacao_botao_comparar" />

    <Spinner
        android:id="@+id/spinnerPesosLata1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCalcular"
        android:layout_alignTop="@+id/textViewPesoLata1" />

    <Spinner
        android:id="@+id/spinnerPesosLata2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewPesoLata2"
        android:layout_toRightOf="@+id/textViewCeveja1" />

    <EditText
        android:id="@+id/editTextPesoEspecificoCerveja1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPesoEspecifico1"
        android:layout_alignBottom="@+id/textViewPesoEspecifico1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textViewCeveja1"
        android:ems="10"
        android:inputType="numberSigned"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewLata2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/comparacao_preco" />

    <EditText
        android:id="@+id/precoCerveja2"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLata2"
        android:layout_alignBottom="@+id/textViewLata2"
        android:layout_alignLeft="@+id/precoCerveja1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewPesoLata2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/precoCerveja2"
        android:layout_marginTop="20dp"
        android:text="@string/comparacao_peso" />

    <TextView
        android:id="@+id/TextViewPesoEspecifico2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerPesosLata2"
        android:text="@string/comparacao_peso_outro_valor" />

    <EditText
        android:id="@+id/editTextPesoEspecificoCerveja2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewPesoEspecifico2"
        android:layout_alignBottom="@+id/TextViewPesoEspecifico2"
        android:layout_toRightOf="@+id/textViewCeveja1"
        android:ems="10"
        android:inputType="numberSigned"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewPesoEspecifico1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerPesosLata1"
        android:text="@string/comparacao_peso_outro_valor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/comparacao_mensagem_produto_2" />

</RelativeLayout>